--- a/lyriccist_server/pubspec.yaml
+++ b/lyriccist_server/pubspec.yaml
@@ -1,7 +1,6 @@
 name: lyriccist_server
 description: A sample command-line application.
 version: 1.0.0
-publish_to: none
 # repository: https://github.com/my_org/my_repo
 
 environment:
@@ -9,9 +8,7 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  grpc: ^3.2.3
-  protos:
-    path: ../protos
+  # path: ^1.8.0
 
 dev_dependencies:
   lints: ^2.0.0
